# gitProject

./: .gitignore  BEFORE_AFTER.md  CMakeLists.txt  COMPILATION_FIX.md  COMPLETION_SUMMARY.md  EVENT_LOOP_FIX.md  FILE_MANIFEST.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  QUICK_EVENT_LOOP_FIX.md  QUICK_FIX.md  QUICK_REFERENCE.md  QUICK_SEND_FIX.md  README.md  RECEIVE_DATA_FIX.md  UDP_FIX_COMPLETE.md  UDP_SEND_DEBUG.md  UDP_SEND_FIX.md  UDP_SEND_SOLUTION.md  WINDOWS_BUILD_GUIDE.md  build_buildlog.txt  rebuild.bat  rebuild.sh
.claude/: settings.local.json
build-cli/NENET_Qt5_autogen/: moc_predefs.h  mocs_compilation.cpp
res/Config/: NEngineConfig.ini
src/: main.cpp  singleton_manager.h
src/config/: config_info.h  ini_config.cpp  ini_config.h
src/core/: global_data.cpp  global_data.h  meta_manage.cpp  meta_manage.h  startup.cpp  startup.h
src/database/: data_structures.h  db_connection.cpp  db_connection.h  db_queries.cpp  db_queries.h
src/hardware/: can_interface.cpp  can_interface.h  hardware_control.h  jf_plate.cpp  jf_plate.h  jf_plate_fwd.h  qj_custom.cpp  qj_custom.h
src/logging/: logger.cpp  logger.h
src/network/: nec_interface.cpp  nec_interface.h  protocol.cpp  protocol.h  udp_interface.cpp  udp_interface.h  udp_worker.cpp  udp_worker.h
src/utils/: convert_utils.cpp  convert_utils.h  string_utils.cpp  string_utils.h
